# Antivirus

./: .gitignore  CMakeLists.txt  README.md
DataBaseFiles/: README.md
demo/: main.cpp
include/: CreatingHash.h  Scanning.h  WorkingWithDB.h
install/: main.py
scripts/: startlin.sh
sources/: CreatingHash.cpp  Scanning.cpp  WorkingWithDB.cpp
